Hide side scrollbar fix

--- a/pages/styles/globals.css
+++ b/pages/styles/globals.css
@@ -14,6 +14,7 @@ body {
   line-height: 1.5;
   --hello: -100%;
   padding-bottom: 250px;
+  overflow-x: hidden;
 }
 
 /* Inherit fonts for inputs and buttons */
